# irstlm

./: .gitignore  Makefile.am  README  README.developer  check_version.sh  configure.ac  configure_onlyformac.ac  install  make-release  readme  regenerate-makefiles.sh  regenerate-makefiles_onlyformac.sh  release.txt  user-manual.3.5
doc/: Makefile.am  user-manual.4.2
example/: Makefile.am
irstlm-collapsehistory/: release.txt
irstlm-collapsehistory/irstlm.xcodeproj/: marcellofederico.mode1  marcellofederico.pbxuser  project.pbxproj
irstlm-collapsehistory/regression-testing/tests/basic-dict/: command
irstlm-collapsehistory/regression-testing/tests/basic-ngt/: command
irstlm-collapsehistory/regression-testing/tests/build-lm-sublm/: command
irstlm-collapsehistory/regression-testing/tests/quantize-lm/: command
irstlm-collapsehistory/scripts/: build-lm-qsub.sh  build-lm.sh  merge-sublm.pl  ngram-split.pl  split-ngt.sh  wrapper
irstlm-collapsehistory/src/: dict.cpp  dictionary.cpp  dictionary.h  lmmacro.cpp  lmmacro.h  lmtable.cpp  n_gram.cpp  n_gram.h  ngramtable.cpp  ngramtable.h
irstlm.xcodeproj/: marcellofederico.mode1  marcellofederico.pbxuser  project.pbxproj
programs/: .gitignore  Makefile.am  dict.cpp  interpolate-lm.cpp  ngt.cpp
regression-testing/: IrstLMRegressionTesting.pm  run-single-test.pl  run-test-suite
regression-testing/tests/basic-dict/: command  err  out  output
regression-testing/tests/basic-ngt/: command
regression-testing/tests/build-lm/: command
regression-testing/tests/build-lm-qsub/: command
regression-testing/tests/build-lm-sublm/: command  subdict
regression-testing/tests/build-lm-sublm2/: command  subdict
regression-testing/tests/build-sublm/: command
regression-testing/tests/compile-lm/: command
regression-testing/tests/interpolate-lm/: command  config1  config2  filter-stdout
regression-testing/tests/interpolate-lm-estimate/: LM1.blm  LM2.blm  LM3.blm  command  config  filter-stdout
regression-testing/tests/interpolate-vs-compile/: command  config1  config2  input
regression-testing/tests/prova-failure/: command
regression-testing/tests/prova-success/: command
regression-testing/tests/quantize-lm/: command  input
scr/: goolm.pl  goomerge.pl  merge-sublm.pl
scripts/: Makefile.am  build-lm-qsub.sh  build-lm.sh  build-sublm.pl  goograms2ngrams.pl  lm-stat.pl  machine-type.bash  machine-type.csh  merge-sublm.pl  ngram-split.pl  os-type.bash  os-type.csh  rm-start-end.sh  split-dict.pl  split-ngt-qsub.sh  split-ngt.sh
src/: .gitignore  Makefile.am  cmd.c  cmd.h  compile-lm.cpp  dict.cpp  dictionary.cpp  dictionary.h  gzfilebuf.h  htable.cpp  htable.h  index.h  interpolate-lm.cpp  lmmacro.cpp  lmmacro.h  lmtable.cpp  lmtable.h  makefile  me-lm.cpp  mempool.cpp  mempool.h  mfstream.cpp  mfstream.h  n_gram.cpp  n_gram.h  ngram.cpp  ngram.h  ngramcache.cpp  ngramcache.h  ngramtable.cpp  ngramtable.h  ngt.cpp  prune-lm.cpp  quantize-lm.cpp  util.cpp  util.h
